# End-to-End-Medical-Chatbot

./: .gitignore  DATABRICKS_APP_DEPLOYMENT.md  README.md  app.py  app.yaml  notion_database_campusx.py  pyproject.toml  requirements.txt  setup.py  store_index.py
.claude/: settings.json
.github/workflows/: databricks-app.yaml
diagrams/: 1-concept.excalidraw  2-system.excalidraw  3-architecture.excalidraw
static/: style.css
templates/: chat.html
